--- a/TekkenApp/TekkenApp/TekkenApp/AppMainPage.xaml
+++ b/TekkenApp/TekkenApp/TekkenApp/AppMainPage.xaml
@@ -8,14 +8,15 @@
 
                 <Label HeightRequest="75" BackgroundColor="#BC0000"/>
 
-                <ListView x:Name="ListViewUser" RowHeight="75">
+                <ListView x:Name="ListViewUser" RowHeight="100">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
                                 <AbsoluteLayout BackgroundColor="#565656" Padding="1,1,1,1">
-                                    <Label Text="Sergei Dragunov" TextColor="White" FontSize="25" AbsoluteLayout.LayoutBounds="160,5,1000,1000"/>
-                                    <Label Text="The White Angel of Death" TextColor="White" FontSize="20" AbsoluteLayout.LayoutBounds="160,35,1000,1000"/>
-                                    <Image Source="ImgResources/SergeiDragunov.png" HeightRequest="100" WidthRequest="150"/>
+                                    <Label Text="{Binding Name}" TextColor="White" FontSize="25" AbsoluteLayout.LayoutBounds="160,5,1000,1000"/>
+                                    <Label Text="{Binding FightingStyle}" TextColor="White" FontSize="20" AbsoluteLayout.LayoutBounds="160,35,1000,1000"/>
+                                    <Label Text="{Binding Origin}" TextColor="White" FontSize="20" AbsoluteLayout.LayoutBounds="160,60,1000,1000"/>
+                                    <Image Source="{Binding Source}" HeightRequest="100" WidthRequest="150"/>
                                 </AbsoluteLayout>
                             </ViewCell>
                         </DataTemplate>
