--- a/TekkenApp/TekkenApp/TekkenApp/AppMainPage.xaml
+++ b/TekkenApp/TekkenApp/TekkenApp/AppMainPage.xaml
@@ -6,14 +6,14 @@
         <ScrollView>
             <StackLayout BackgroundColor="#424242">
 
-                <Label HeightRequest="75" BackgroundColor="#BC0000"/>
+                <Label Text="TEKKEN 7 GUIDE" Font="Impact" FontSize="50" HeightRequest="75" BackgroundColor="#BC0000" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
 
                 <ListView x:Name="ListViewUser" RowHeight="100">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
                                 <AbsoluteLayout BackgroundColor="#565656" Margin="5,5,0,0">
-                                    <Label Text="{Binding Name}" TextColor="White" FontSize="25" AbsoluteLayout.LayoutBounds="160,5,1000,1000"/>
+                                    <Label Text="{Binding Name}" TextColor="White" FontSize="25" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="160,5,1000,1000"/>
                                     <Label Text="{Binding FightingStyle}" TextColor="White" FontSize="20" AbsoluteLayout.LayoutBounds="160,35,1000,1000"/>
                                     <Label Text="{Binding Origin}" TextColor="White" FontSize="20" AbsoluteLayout.LayoutBounds="160,60,1000,1000"/>
                                     <Image Source="{Binding Source}" HeightRequest="100" WidthRequest="150"/>
