--- a/TekkenApp/TekkenApp/TekkenApp/ProfilePage.xaml
+++ b/TekkenApp/TekkenApp/TekkenApp/ProfilePage.xaml
@@ -18,10 +18,15 @@
                     <AbsoluteLayout>
                         <Label Text="Story" TextColor="White" FontSize="25" FontAttributes="Italic" AbsoluteLayout.LayoutBounds="10,0,200,50"/>
 
-                        <Label x:Name="BaseStory" TextColor="White" FontSize="15" FontAttributes="Italic" AbsoluteLayout.LayoutBounds="10,40,400,250"/>
+                        <Label x:Name="BaseStory" BackgroundColor="Red" TextColor="White" FontSize="15" FontAttributes="Italic" AbsoluteLayout.LayoutBounds="10,40,400,200"/>
                     </AbsoluteLayout>                    
-                </Frame>                
+                </Frame>
                 
+                <Frame Margin="0,15,0,0">
+                    <AbsoluteLayout>
+                        <Label Text="Movelist" BackgroundColor="Blue" TextColor="White" FontSize="25" FontAttributes="Italic" AbsoluteLayout.LayoutBounds="10,0,200,50"/>
+                    </AbsoluteLayout>
+                </Frame>
 
             </StackLayout>
         </ScrollView>
